--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="userEmailRes">UserEmail</string>
     <string name="your_learning_progress">Your learning progress</string>
     <string name="tabswitch">tabSwitch</string>
+    <string name="start_teaching">Start teaching</string>
+    <string name="chenge_profile">Chenge profile</string>
+    <string name="settings">Settings</string>
+    <string name="your_progress">Your progress</string>
 </resources>
