--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="chenge_profile">Chenge profile</string>
     <string name="settings">Settings</string>
     <string name="your_progress">Your progress</string>
+    <string name="action_settings">action_settings</string>
 </resources>
